# Rustpdater

./: Cargo.toml  Makefile  readme.md  watcher.toml  watcher.toml.example
src/: main.rs
src/daemon/: config.rs  errors.rs  git_ops.rs  mod.rs  repo_config.rs  watcher.rs
tests/: config_tests.rs  errors_tests.rs  repo_config_tests.rs  watcher_tests.rs
