[package]
name = "rustpdater"
version = "0.1.0"
edition = "2021"

[dependencies]
clap        = { version = "4", features = ["derive"] }
serde       = { version = "1", features = ["derive"] }
toml        = "0.8"
tokio       = { version = "1", features = ["full"] }
git2        = "0.20.1"
thiserror   = "2.0.12"
